CamelCase + Nombres Carpetas

--- a/Contacto.html
+++ b/Contacto.html
@@ -20,7 +20,7 @@
     <header id="headerIndex" class="borderIndex d-flex align-items-center">
       <!--Comienzo Nav-->
       <nav class="navbar navbar-expand-lg navbar-light">
-              <a class="navbar-brand" href="index.html"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi">
+              <a class="navbar-brand" href="index.html"><img src="./img/logoCapi.jpg" alt="logocapi">
               </a>   <!--Logo-->
                 <div class="container-fluid hambur"> <!--Menú-->
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -144,7 +144,7 @@
           </div>
           <div class="padreRedes"> <!--Logo y Redes-->
               <div class="footerLogo">
-                  <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
+                  <img src="./img/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                   <em class="">Capicúa Limpieza</em>
                   <em class="infoNosotros">capi.limpieza@gmail.com</em>
               </div>
