--- a/Error.html
+++ b/Error.html
@@ -19,13 +19,13 @@
     <main class="position-relative"> <!--Mantenimiento-->
         <section class="container position-absolute positionError" data-aos="zoom-in" data-aos-duration="3000"> 
             <article class="row d-flex justify-content-center">
-            <a href="index.html" class="text-center col-12 col-md-6 col-lg-4"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="Logo" class="imgError"></a>
+            <a href="index.html" class="text-center col-12 col-md-6 col-lg-4"><img src="./img/logoCapi.jpg" alt="Logo" class="imgError"></a>
             <h3 class="col-12 text-center">Estamos Trabajando en ello!</h2>
             <h5 class="col-12 text-center">Actualmente estamos trabajando en incoporar nuevos productos al listado, pero puedes descargar el PDF con la antigua lista!</h5>
             <h6 class="col-12 text-center">Comunicate con nosotros para una asesoría personalizada.</h6>
             <div class="d-flex justify-content-end gap-2 col-12">
             <a href="Productos.html"><button class="btn btnContactoS sombra">Volver a Productos</button></a>
-            <a href="./ListaVieja/LISTA DE PRECIOS MARZO 2020.pdf" target="_blank"><button class="btn btnContactoD sombra">Descargar PDF</button></a>
+            <a href="./lista/LISTA DE PRECIOS MARZO 2020.pdf" target="_blank"><button class="btn btnContactoD sombra">Descargar PDF</button></a>
             </div>
         </article>   
         </section>
