--- a/Nosotros.html
+++ b/Nosotros.html
@@ -20,7 +20,7 @@
   <header id="headerIndex" class="borderIndex d-flex align-items-center">
     <!--Comienzo Nav-->
     <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+            <a class="navbar-brand" href="index.html"><img src="./img/logoCapi.jpg" alt="logocapi" >
             </a>   <!--Logo-->
               <div class="container-fluid hambur"> <!--Menú-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,14 +60,14 @@
           <div class="col-xxl-8 col-md-12 col-12 areafotos">
             <h3 class="text-center mt-3 mb-4">Fotos</h3>
             <article class="d-flex justify-content-evenly align-items-center flex-column flex-md-column flex-xl-row">
-                <img src="./FOTOSYVIDEOS/capiLocalFoto2.jpg" alt="fotocapiafuera" class="imageneslocal">
-                <img src="./FOTOSYVIDEOS/capiLocalFoto1.jpg" alt="fotocapiadentro" class="imageneslocal">
+                <img src="./img/capiLocalFoto2.jpg" alt="fotocapiafuera" class="imageneslocal">
+                <img src="./img/capiLocalFoto1.jpg" alt="fotocapiadentro" class="imageneslocal">
               </article>
             </div>
               <div class="col-xxl-4 col-md-12 col-12 areavid">
               <h3 class="text-center mb-4 mt-3">Videos</h3>
               <article class="d-flex justify-content-center">
-              <video src="./FOTOSYVIDEOS/capiLocalVideo.MP4" controls class="imageneslocal row borde1px"></video>
+              <video src="./img/capiLocalVideo.MP4" controls class="imageneslocal row borde1px"></video>
               </article>
               </div>
             </div>
@@ -98,7 +98,7 @@
           </div> 
           <div class="padreRedes"> <!--Logo y Redes-->
               <div class="footerLogo">
-                  <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
+                  <img src="./img/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                   <em class="">Capicúa Limpieza</em>
                   <em class="infoNosotros">capi.limpieza@gmail.com</em>
               </div>
