--- a/Productos.html
+++ b/Productos.html
@@ -20,7 +20,7 @@
   <header id="headerIndex" class="borderIndex d-flex align-items-center">
     <!--Comienzo Nav-->
     <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+            <a class="navbar-brand" href="index.html"><img src="./img/logoCapi.jpg" alt="logocapi" >
             </a>   <!--Logo-->
               <div class="container-fluid hambur"> <!--Menú-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,22 +53,22 @@
               <section class="d-flex justify-content-around mt-3 container-fluid"> <!--Categorias 1-->
                 <div class="row justify-content-around gap-5">
                   <article class="contenedor col-6 col-xl-3"> <p> Piscina</p> <!--Categoria 1-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/PastillasCloro.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/PastillasCloro.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">8 Productos</div>
                      <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Aromas</p> <!--Categoria 2-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Saphirus.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/Saphirus.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">50 Productos </div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Forrajeria</p> <!--Categoria 3-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Whiskas.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/Whiskas.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">22 Productos </div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Ropa</p> <!--Categoria 4-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Ariel.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/Ariel.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">25 Productos</div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
@@ -78,22 +78,22 @@
               <section class="d-flex justify-content-around mt-3 container-fluid"> <!--Categorias 2-->
                 <div class="row justify-content-around gap-5">
                   <article class="contenedor col-6 col-xl-3"> <p>Desinfección</p> <!--Categoria 5-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/AyudinTripleAccion.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/AyudinTripleAccion.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">10 Productos</div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Vajillas</p> <!--Categoria 6-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Magistral.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/Magistral.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">15 Productos </div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Higiene Personal</p> <!--Categoria 7-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/HeadAndShoulders.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/HeadAndShoulders.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">40 Productos </div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Pisos</p> <!--Categoria 8-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/PerfuminaPoett.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/PerfuminaPoett.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">15 Productos</div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
@@ -103,22 +103,22 @@
               <section class="d-flex justify-content-around mt-3 container-fluid"> <!--Categorias 3-->
                 <div class="row justify-content-around gap-5">
                   <article class="contenedor col-6 col-xl-3"> <p>Bazar</p> <!--Categoria 9-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/TermoStanley.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/TermoStanley.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">30 Productos</div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article> 
                   <article class="contenedor col-6 col-xl-3"> <p>Textiles</p> <!--Categoria 10-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/repasador.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/repasador.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">35 Productos </div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Alcalinas</p> <!--Categoria 11-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/EnergizerPilaAA.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/EnergizerPilaAA.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">8 Productos </div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Barbijos</p> <!--Categoria 12-->
-                      <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Jarbibo.jpg" alt="" class="contenedor__img borderRadius"></div>
+                      <div class="contenedor__img"><img src="./img/Jarbibo.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">7 Productos</div>
                       <a href="Error.html"><button class="contenedor__boton--activo">Ver Productos</button></a> 
                   </article>
@@ -138,15 +138,15 @@
         <section class="d-flex justify-content-around mt-2 container-fluid" data-aos="fade-right" data-aos-duration="2500">
           <div class="row gap-5 justify-content-center">
             <article class="contenedor4 col-12 col-md-4 col-xl-4">  <p> Compra en local</p> <!--Método 1-->
-                <div class="contenedor4__img"><img src="./FOTOSYVIDEOS/CompraLocal.jpg" alt="" class="contenedor4__img borderRadius"></div>
+                <div class="contenedor4__img"><img src="./img/CompraLocal.jpg" alt="" class="contenedor4__img borderRadius"></div>
                 <div class="contenedor4__hijo mt-2">Veni a nuestro negocio! podes encontrar la ubicación en el footer! </div>
             </article>
             <article class="contenedor4 col-12 col-md-4 col-xl-4"> <p>Delivery</p> <!--Método 2-->
-              <div class="contenedor4__img"><img src="./FOTOSYVIDEOS/EntregaLocal.jpg" alt="" class="contenedor4__img borderRadius"></div>
+              <div class="contenedor4__img"><img src="./img/EntregaLocal.jpg" alt="" class="contenedor4__img borderRadius"></div>
               <div class="contenedor4__hijo mt-2">Entregamos de 12 a 18hs en toda la ciudad de Córdoba! </div>
           </article>
           <article class="contenedor4 col-12 col-md-4 col-xl-4"> <p> Entrega por Mensajeria</p> <!--Método 3-->
-            <div class="contenedor4__img"><img src="./FOTOSYVIDEOS/EntregaEmpresa.jpg" alt="" class="contenedor4__img borderRadius"></div>
+            <div class="contenedor4__img"><img src="./img/EntregaEmpresa.jpg" alt="" class="contenedor4__img borderRadius"></div>
             <div class="contenedor4__hijo">¿Estas fuera de horario? no te preocupes! te lo mandamos por otro medio! </div>
         </article>
         </div>   
@@ -155,7 +155,7 @@
           <div class="row">
           <article class="contenedor2 d-flex align-items-center col-12 col-md-8 col-xl-6 container-fluid ">
               <div class="d-flex">
-              <img src="./FOTOSYVIDEOS/Contacto.jpg" alt="" class="contenedor2__img mx-2 d-none d-sm-block d-md-block d-xl-block ">
+              <img src="./img/Contacto.jpg" alt="" class="contenedor2__img mx-2 d-none d-sm-block d-md-block d-xl-block ">
               <div class="d-flex flex-column justify-content-between">
               <h5>Lista de Precios</h5>
               <div class="contenedor2__hijo">Necesitas la lista de precios completa y actualizada? No dudes en pedirla! Contactanos por cualquier medio y te la enviamos en menos de 24hs!
@@ -191,7 +191,7 @@
           </div>
           <div class="padreRedes"> <!--Redes y Logo-->
               <div class="footerLogo">
-                  <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
+                  <img src="./img/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                   <em class="">Capicúa Limpieza</em>
                   <em class="infoNosotros">capi.limpieza@gmail.com</em>
               </div>
