--- a/Ofertas.html
+++ b/Ofertas.html
@@ -20,7 +20,7 @@
     <header id="headerIndex" class="borderIndex d-flex align-items-center">
         <!--Comienzo Nav-->
         <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+                <a class="navbar-brand" href="index.html"><img src="./img/logoCapi.jpg" alt="logocapi" >
                 </a>   <!--Logo-->
                   <div class="container-fluid hambur"> <!--Menú-->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
     <section class="grillaOfertas2 mt-4 gap-4" data-aos="zoom-in" data-aos-duration="3000"> <!--Ofertas Packs-->
         <article class="p1"> <!--Pack 1-->
         <div class="tipoProducto OfertasCards d-flex flex-row align-items-center gap-3 borderRadius">
-            <img src="./FOTOSYVIDEOS/PackLimpieza.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
+            <img src="./img/PackLimpieza.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
             <div class="flex-column">
                 <p class="negrita">Pack Hogar 1</p>
                 <ol>
@@ -88,7 +88,7 @@
         </article>
         <article class="p2"> <!--Pack 2-->
             <div class="tipoProducto OfertasCards d-flex flex-row flex-sm-row flex-md-row flex-xl-row align-items-center gap-3 borderRadius"> 
-                <img src="./FOTOSYVIDEOS/PackLimpieza.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
+                <img src="./img/PackLimpieza.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
                 <div class="flex-column">
                     <p class="negrita">Pack Hogar 2</p>
                     <ol>
@@ -104,7 +104,7 @@
         </article>
         <article class="p3"> <!--Pack 3-->
             <div class="tipoProducto OfertasCards d-flex flex-row flex-sm-row flex-md-row flex-xl-row align-items-center gap-3 borderRadius">
-                <img src="./FOTOSYVIDEOS/PackLimpieza.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
+                <img src="./img/PackLimpieza.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
                 <div class="flex-column">
                     <p class="negrita">Pack Pileta</p>
                     <ol>
@@ -123,7 +123,7 @@
             <!--Individuales-->
         <article class="i1"> <!--Individual 1-->
         <div class="tipoProducto OfertasCards d-flex flex-row flex-sm-row flex-md-row flex-xl-row align-items-center gap-3 borderRadius">
-            <img src="./FOTOSYVIDEOS/Individual.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
+            <img src="./img/Individual.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
             <div class="flex-column">
                 <p class="negrita">Invividual 1</p>
                 <ol>
@@ -139,7 +139,7 @@
         </article>
         <article class="i2"> <!--Individual 2-->
             <div class="tipoProducto OfertasCards d-flex flex-row flex-sm-row flex-md-row flex-xl-row align-items-center gap-3 borderRadius">
-                <img src="./FOTOSYVIDEOS/Individual.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
+                <img src="./img/Individual.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
                 <div class="flex-column">
                     <p class="negrita">Individual 2</p>
                     <ol>
@@ -153,7 +153,7 @@
         </article>
         <article class="i3"> <!--Individual 3-->
             <div class="tipoProducto OfertasCards d-flex flex-row flex-sm-row flex-md-row flex-xl-row align-items-center gap-3 borderRadius">
-                <img src="./FOTOSYVIDEOS/Individual.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
+                <img src="./img/Individual.jpg" alt="" class="ImgsOfertas borderRadius ms-2">
                 <div class="flex-column">
                     <p class="negrita">Individual 3</p>
                     <ol>
@@ -191,7 +191,7 @@
         </div>
         <div class="padreRedes"> <!--Logo y Redes-->
             <div class="footerLogo">
-                <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
+                <img src="./img/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                 <em class="">Capicúa Limpieza</em>
                 <em class="infoNosotros">capi.limpieza@gmail.com</em>
             </div>
