--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header id="headerIndex" class="borderIndex d-flex align-items-center">
     <!--Comienzo Nav-->
     <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+            <a class="navbar-brand" href="index.html"><img src="./img/logoCapi.jpg" alt="logocapi" >
             </a>   <!--Logo-->
               <div class="container-fluid hambur"> <!--Menú-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,14 +57,14 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="FOTOSYVIDEOS/FotoCarrusel1-copia.jpg" class="d-block w-100" alt="FotoCarrusel1">
+              <img src="img/FotoCarrusel1-copia.jpg" class="d-block w-100" alt="FotoCarrusel1">
               <div class="carousel-caption d-block d-md-block paraCarrusel">
                 <h5>Todo para tu hogar!</h5>
                 <p>En Capicua siempre tenemos el producto que estas buscando!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="FOTOSYVIDEOS/FotoCarrusel2-copia.jpg" class="d-block w-100" alt="FotoCarrusel2">
+              <img src="img/FotoCarrusel2-copia.jpg" class="d-block w-100" alt="FotoCarrusel2">
               <div class="carousel-caption d-block d-sm-block paraCarrusel">
                 <h5 class="d-none d-sm-block">¿Sos obsesivo de la limpieza?¿Te gusta tener siempre todo limpio?</h5>
                 <p class="d-none d-sm-block"">Nosotros tambien! Acá vas a encontrar desde el producto más básico hasta el más rebuscado</p>
@@ -72,7 +72,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="FOTOSYVIDEOS/FotoCarrusel3-copia.jpg" class="d-block w-100" alt="FotoCarrusel3">
+              <img src="img/FotoCarrusel3-copia.jpg" class="d-block w-100" alt="FotoCarrusel3">
               <div class="carousel-caption d-block d-md-block paraCarrusel">
                 <h5 class="d-none d-sm-block">¡Ofertas nuevas todas las semanas!</h5>
                 <p class="d-none d-sm-block">Suscribite a nuestro newsletter para no perderte ni una promoción!</p>
@@ -94,32 +94,32 @@
         <div class="container" data-aos="fade-up">
           <div class="row text-center mt-3">
             <div class="col-md-4 col-6 mt-3"><!--Categoria 1-->
-              <img src="./FOTOSYVIDEOS/Ariel.jpg" alt="Ariel" class="img-fluid">
+              <img src="./img/Ariel.jpg" alt="Ariel" class="img-fluid">
               <h4>Lavarropas</h4>
               <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"><!--Categoria 2-->
-              <img src="./FOTOSYVIDEOS/Magistral.jpg" alt="Magistral" class="img-fluid">
+              <img src="./img/Magistral.jpg" alt="Magistral" class="img-fluid">
               <h4>Vajilla</h4>
               <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 3-->
-              <img src="./FOTOSYVIDEOS/AyudinTripleAccion.jpg" alt="AyudinTripleAccion" class="img-fluid">
+              <img src="./img/AyudinTripleAccion.jpg" alt="AyudinTripleAccion" class="img-fluid">
               <h4>Desinfección</h4>
               <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 4-->
-              <img src="./FOTOSYVIDEOS/PastillasCloro.jpg" alt="Cloro" class="img-fluid">
+              <img src="./img/PastillasCloro.jpg" alt="Cloro" class="img-fluid">
               <h4>Pileta</h4>
               <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 5-->
-              <img src="./FOTOSYVIDEOS/Saphirus.jpg" alt="Saphirus" class="img-fluid">
+              <img src="./img/Saphirus.jpg" alt="Saphirus" class="img-fluid">
               <h4>Aromatizante</h4>
               <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 6-->
-              <img src="./FOTOSYVIDEOS/TermoStanley.jpg" alt="Termo" class="img-fluid">
+              <img src="./img/TermoStanley.jpg" alt="Termo" class="img-fluid">
               <h4>Bazar/Regaleria</h4>
               <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
@@ -130,19 +130,19 @@
     <section class="container-fluid" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="300"> <!--Section Novedades-->
         <div class="padre justify-content-around">
           <div class="hijo1"> <!--Novedad 1-->
-            <img src="./FOTOSYVIDEOS/MopaCentrifuga.png" alt="MopaCentrifuga" class="img-fluid">
+            <img src="./img/MopaCentrifuga.png" alt="MopaCentrifuga" class="img-fluid">
             <em class="descripciones d-flex text-center">Mopa Gadnic con Balde Escurridor Centrífugo c/ Pedal</em>
           </div>
           <div class="hijo2"> <!--Novedad 2-->
-            <img src="./FOTOSYVIDEOS/EscobillaTecho.png" alt="EscobillaTecho" class="img-fluid">
+            <img src="./img/EscobillaTecho.png" alt="EscobillaTecho" class="img-fluid">
             <em class="descripciones d-flex text-center">Escobilla Limpia Techo Fiorentina 1.5Mts</em>
           </div>
           <div class="hijo3"> <!--Novedad 3-->
-            <img src="./FOTOSYVIDEOS/PouchPedigree.jpg" alt="Pouch" class="img-fluid">
+            <img src="./img/PouchPedigree.jpg" alt="Pouch" class="img-fluid">
             <em class="descripciones d-flex text-center">Pouch (Húmedo) Para Perro Pedigree 100gr</em>
           </div>
           <div class="hijo4"> <!--Novedad 4-->
-            <img src="./FOTOSYVIDEOS/AzufreBarra.jpg" alt="Azufre" class="img-fluid">
+            <img src="./img/AzufreBarra.jpg" alt="Azufre" class="img-fluid">
             <em class="descripciones d-flex text-center">Azufre en Barra Puro, 5 unidades</em>
         </div>
       </div>
@@ -173,7 +173,7 @@
         </div> 
         <div class="padreRedes"> <!--Redes y Logo-->
             <div class="footerLogo">
-                <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
+                <img src="./img/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                 <em class="">Capicúa Limpieza</em>
                 <em class="infoNosotros">capi.limpieza@gmail.com</em>
             </div>
